Apply rule ""@Deprecated" code should not be used"